[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.2", features = ["full"] }
axum = {version = "0.6.20", features = ["headers", "macros"]}
axum-prometheus = "0.4.0"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tracing = "0.1.37"
http = "0.2.9"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tower = "0.4.13"
tracing-appender = "0.2.2"